# otpcr

./: .flake8  .pylintrc  README.rst  pyproject.toml  setup.py
.github/workflows/: devskim.yml  ossar.yml
docs/: about.rst  conf.py  echa.rst  evidence.rst  guilty.rst  index.rst  manual.rst  reconsider.rst  reconsider2.rst  skull.rst  source.rst  writing.rst  writings.rst
docs/_static/: genocide.css  otpcr.css
otpcr/: __init__.py  __main__.py  admin.py  booting.py  broker.py  brokers.py  cache.py  cli.py  client.py  clients.py  cmnd.py  command.py  configs.py  console.py  control.py  daemon.py  default.py  defines.py  disk.py  encoder.py  error.py  event.py  find.py  handler.py  locater.py  lookups.py  main.py  message.py  object.py  objects.py  output.py  package.py  parsers.py  paths.py  persist.py  reactor.py  repeats.py  runtime.py  service.py  statics.py  (+6 more)
otpcr/mirrors/: __init__.py
otpcr/modules/: __init__.py  adm.py  atr.py  bsc.py  cfg.py  cmd.py  err.py  face.py  fie.py  flt.py  fnd.py  hlp.py  irc.py  log.py  man.py  mbx.py  mdl.py  mod.py  opm.py  pth.py  pwd.py  req.py  rss.py  rst.py  sil.py  slg.py  srv.py  tbl.py  tdo.py  thr.py  tmr.py  udp.py  upt.py  wdr.py  web.py  wsd.py
otpcr/network/: about.html  echa.html  evidence.html  genindex-all.html  genindex.html  guilty.html  index.html  manual.html  objects.inv  pubchem.html  reconsider.html  (+7 more)
testing/: test_ainterface.py  test_booting.py  test_brokers.py  test_client.py  test_clients.py  test_command.py  test_composite.py  test_configs.py  test_decoder.py  test_defines.py  test_encoder.py  test_github.py  test_hackernews.py  test_handler.py  test_inherit.py  test_locater.py  test_loggers.py  test_message.py  test_methods.py  test_object.py  test_objects.py  test_opml.py  test_package.py  test_parsers.py  test_persist.py  test_repeats.py  test_runtime.py  test_statics.py  test_storage.py  test_threads.py  test_timings.py  test_utility.py  test_workdir.py
tests/: test_attrs.py  test_interface.py  test_object.py  test_opml.py
(+5 files in other folders)
