[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "otpcr"
description = "Since 4 March 2019."
version = "101"
authors = [
    {name = "Bart Thate", email = "bthate@dds.nl" },
]
readme = "README.rst"
license = "Unlicense"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/otpcr"
"bugs" = "https://github.com/otpcr/otpcr/issues"
"source" = "https://github.com/otpcr/otpcr"


[tool.setuptools]
packages = [
    'otpcr',
    'otpcr.modules',
    'otpcr.network',
    'otpcr.network._static',
    'otpcr.network._images',
    'otpcr.network.pdf'
]
include-package-data = true


[tool.setuptools.package-data]
"otpcr.network"         = ["*"]
"otpcr.network._images" = ["*"]
"otpcr.network._static" = ["*"]
"otpcr.network.pdf"     = ["*"]
